Fix T48654: outline text visible while renaming

Both button and rename text would draw while renaming,
caused issues with some themes.